Fix mobile ads not showing in front page

--- a/less/ads.less
+++ b/less/ads.less
@@ -79,7 +79,10 @@
   &__box2,
   &__box3,
   &__box4,
-  &__box5 {
+  &__box5,
+  &__mobbox1,
+  &__mobbox2,
+  &__mobbox3 {
     display: flex;
     justify-content: center;
   }
